--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,151 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+img{
+    /* width: 100%; */
+    height: 100%;
+    display: block;
+}
+
+
+/* utility class */
+.container{
+    display: flex;
+
+    height: calc(100vh - 100px);  /* 100px relativi al player */
+
+}
+
+.padding-side{
+    padding-inline: 20px;
+}
+
+a{
+    text-decoration: none;
+}
+
+
+
+/* aside */
+aside{
+    min-width: 230px;
+
+    /* test */
+    background-color: lightpink;
+}
+
+
+
+
+/* main */
+main{
+    
+    flex-grow: 1;
+    overflow: auto;
+
+    
+}
+
+.top-bar{
+    position: absolute;
+    width: calc(100vw - 230px);
+    overflow: visible;
+
+    background-color: lightcoral;
+
+    /* test */
+    height: 80px;
+}
+
+.secondary-nav ul{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    
+    overflow: visible;
+
+    padding-top: 80px;
+
+    list-style: none;
+}
+
+.row{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    
+    
+
+    margin-bottom: 30px;
+
+    
+    
+}
+
+.tile{
+
+    width: calc(100% / 6);
+
+    
+    
+    /* test */
+    background-color: aquamarine;
+    height: 250px;
+    border: 1px solid red;
+
+}
+
+
+
+/* player */
+#player{
+
+    /* test */
+    height: 100px;
+    background-color: lightseagreen;
+}
+
+
+/* responsive */
+
+@media screen and (max-width: 992px) {
+
+    
+    .tile{
+        width: calc(100% / 4);
+                    
+    }
+    
+}
+
+@media screen and (max-width: 768px) {
+
+    
+    .tile{
+        width: calc(100% / 2);
+                    
+    }
+    
+}
+
+@media screen and (max-width: 568px) {
+
+    
+    .tile{
+        width: calc(100% / 2);
+                    
+    }
+
+    aside{
+        min-width: 50px;
+    }
+
+    .top-bar{
+        
+        width: calc(100vw - 50px);
+    
+    }
+    
+}
