--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,17 @@
 }
 
 img{
-    /* width: 100%; */
-    height: 100%;
     display: block;
+    max-width: 100%;
+    height: auto;
+   
 }
+
+h2{
+    padding-block: 20px;
+}
+
+
 
 
 /* utility class */
@@ -77,10 +84,8 @@ main{
 .row{
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+   
     
-    
-
     margin-bottom: 30px;
 
     
@@ -91,11 +96,11 @@ main{
 
     width: calc(100% / 6);
 
-    
+
     
     /* test */
     background-color: aquamarine;
-    height: 250px;
+    /* height: 250px; */
     border: 1px solid red;
 
 }
