--- a/css/style.css
+++ b/css/style.css
@@ -5,15 +5,9 @@
     box-sizing: border-box;
 }
 
-img{
-    display: block;
-    max-width: 100%;
-    height: auto;
-   
-}
-
-h2{
-    padding-block: 20px;
+body{
+    font-family: sans-serif;
+    background-color: #141922;
 }
 
 
@@ -22,9 +16,9 @@ h2{
 /* utility class */
 .container{
     display: flex;
-
+    
     height: calc(100vh - 100px);  /* 100px relativi al player */
-
+    
 }
 
 .padding-side{
@@ -34,6 +28,48 @@ h2{
 a{
     text-decoration: none;
 }
+
+.title {
+    text-align: center;
+    font-weight: bold;
+    color: white;
+    margin-top: 20px;
+    
+}
+
+.subtitle {
+    margin-top: 10px;
+    font-size: 0.8em;
+    font-weight: bold;
+    color: #797c80;
+}
+
+img{
+    display: block;
+    width: 100%;
+    max-width: 180px;
+    /* height: auto; */
+   
+}
+
+h2{    
+    color: white;
+}
+
+
+.button {    
+    padding: 14px 40px;
+
+    border-radius: 30px;
+    border: 2px solid white;
+
+    font-size: 0.8em;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: white;
+
+}
+
 
 
 
@@ -57,15 +93,20 @@ main{
     
 }
 
+
 .top-bar{
     position: absolute;
     width: calc(100vw - 230px);
-    overflow: visible;
-
-    background-color: lightcoral;
-
+    text-align: end;
+    
     /* test */
-    height: 80px;
+    background-color:rgba(0, 0, 0, 0.4);
+    /* height: 80px; */
+}
+
+.upgrade{
+    /* margin: 30px 20px 40px; */
+    margin: 30px 24px 35px;
 }
 
 .secondary-nav ul{
@@ -74,35 +115,45 @@ main{
     justify-content: center;
     gap: 20px;
     
-    overflow: visible;
-
-    padding-top: 80px;
+    padding-top: calc(80px + 24px);   /* 80px = altezza top-bar */
+    padding-bottom: 40px;
 
     list-style: none;
+}
+
+.secondary-nav ul a{
+    text-transform: uppercase;
+    font-size: 0.8em;
+    font-weight: bold;
+    color: #797c80;
+
 }
 
 .row{
     display: flex;
     flex-wrap: wrap;
+    gap: 10px;
    
     
-    margin-bottom: 30px;
-
-    
+    padding-block: 30px;    
     
 }
 
 .tile{
 
-    width: calc(100% / 6);
+    width: calc(100% / 6 - 10px / 6 * 5);
 
 
-    
-    /* test */
-    background-color: aquamarine;
-    /* height: 250px; */
-    border: 1px solid red;
+}
 
+
+#recently-played .subtitle{
+    text-align: center;
+   
+}
+
+#popular-artist img{
+    border-radius: 50%;
 }
 
 
@@ -122,7 +173,7 @@ main{
 
     
     .tile{
-        width: calc(100% / 4);
+        width:  calc(100% / 4 - 10px / 4 * 3);
                     
     }
     
@@ -132,7 +183,7 @@ main{
 
     
     .tile{
-        width: calc(100% / 2);
+        width: calc(100% / 2 - 10px / 2);
                     
     }
     
@@ -142,7 +193,7 @@ main{
 
     
     .tile{
-        width: calc(100% / 2);
+        width: calc(100% / 2 - 10px / 2);
                     
     }
 
