--- a/css/style.css
+++ b/css/style.css
@@ -41,34 +41,6 @@ body{
     color: #797c80;
 }
 
-.button {    
-    padding: 14px 40px;
-
-    border-radius: 30px;
-    border: 2px solid white;
-
-    font-size: 0.8em;
-    font-weight: bold;
-    text-transform: uppercase;
-    color: white;
-}
-
-.button:hover{
-    transform: scale(1.1);
-}
-
-
-.active{
-    border-left: 3px solid #c1eb7d; 
-    color: white;   
-}
-
-.active-btm{
-    padding-bottom: 3px;
-    border-bottom: 3px solid #c1eb7d; 
-    color: white;
-}
-
 h2{    
     color: white;
 }
@@ -83,6 +55,90 @@ a{
 }
 
 
+/* buttons */
+
+.button {    
+    padding: 14px 40px;
+
+    border-radius: 30px;
+    border: 2px solid white;
+
+    font-size: 0.8em;
+    font-weight: bold;
+    text-transform: uppercase;
+    
+}
+
+.button a{
+    color: white;
+}
+
+.button:hover{
+    transform: scale(1.1);
+}
+
+/* active status */
+
+.active{
+    border-left: 3px solid #c1eb7d; 
+    color: white;   
+}
+
+.active-btm{
+    display: block;
+    position: relative;
+    top: 0;
+    left: 50%;
+
+    transform: translate(-50%);
+
+    height: 3px;
+    width: 30%;
+
+    margin-top: 5px;
+    background-color: #c1eb7d;
+
+}
+
+
+
+/* player and volume bar */
+
+.border-bar{
+    position: relative;
+    flex-grow: 1;
+    
+    border-radius: 10px;
+    background-color: #c1c1c1
+    
+}
+.played-bar{
+    height:3px;
+    width:20%;
+    background-color: #5a5a5a;
+}
+
+
+.circle-bar{
+    position: absolute;
+    z-index: 1;
+    display: none;
+    top: -3px;
+    left: 20%;
+    width: 10px;
+    height: 10px;
+    
+    border-radius: 50%;
+    background-color: white;
+}
+.volume-bar:hover .played-bar{
+    background-color: #c1eb7d;
+    transform: scale(1.1);
+}
+
+.volume-bar:hover .circle-bar{
+    display: block;
+}
 
 
 
@@ -100,7 +156,6 @@ aside{
     
     font-size: 14px;
     font-weight: bold;
-    color: #5a5a5a;
     background-color: black;
 
     
@@ -128,12 +183,16 @@ aside > *:not(#primary-nav,#logo){
 
 #primary-nav > li:not(.active){
     padding-left: 1.5em ;
+    
 }
 
+#primary-nav li:nth-of-type(2) a{
+    color: white;
+}
 
 #primary-nav .nav-item{
     display: flex;
-    align-items: center;
+    align-items: center;    
 }
 
 #primary-nav .nav-item:nth-of-type(2){
@@ -284,6 +343,10 @@ main{
 
 }
 
+.secondary-nav ul li:first-of-type a{
+    color: white;
+}
+
 .secondary-nav ul a:hover{
     color: white;
 }
@@ -304,13 +367,37 @@ main{
     width: calc(100% / 6 - 10px / 6 * 5);
 
 }
+.tile .tile-img{
+    position: relative;
 
-.tile img{
+}
+.tile img{    
+    
     display: block;
     width: 100%;
-    max-width: 180px;
+    max-width: 180px; 
    
 }
+
+.tile .fa-circle-play{
+    position: absolute;
+    display: none;
+    top: 35%;
+    left: 35%;
+    font-size: 50px;
+
+    color: white;
+}
+
+.tile .tile-img:hover img{
+    filter: brightness(0.7);
+}
+
+.tile .tile-img:hover .fa-circle-play{
+    display: block;
+}
+
+
 
 
 #recently-played .subtitle{
@@ -343,7 +430,6 @@ main{
 }
 
 
-
 .player-left img{
     width: 42px;
     margin-right: 1em;
@@ -370,6 +456,8 @@ main{
 }
 
 .player-left .icons{
+    display: flex;
+    gap: 14px;
     align-self: center;
     color: #797c80;
     margin-left: 40px;    
@@ -381,10 +469,6 @@ main{
 
 }
 
-
-.icons span:first-child{
-    margin-right: 14px;
-}
 
 .player-center{
     width: 33%;
@@ -407,8 +491,11 @@ main{
 }
 
 
+
 .progress-bar{
+    
     display: flex;
+    justify-content: space-between;
     align-items: center;
     gap: 24px;
     
@@ -416,28 +503,19 @@ main{
     
 }
 
-.border-bar{
-    flex-grow: 1;
-    
-    border-radius: 10px;
-    background-color: #c1c1c1
-    
+
+.progress-bar .volume-bar{
+    width: 80%;
 }
-.played-bar{
-    height:3px;
-    width:20%;
-    background-color: #5a5a5a;
-}
+
+
+
 
 .number-side-bar{
     font-size: 8px;
     color: white;
 }
 
-.played-bar:hover{
-    background-color: #c1eb7d;
-    transform: scale(1.1);
-}
 
 
 
@@ -466,7 +544,6 @@ main{
 
 
 
-
 /* RESPONSIVE */
 
 @media screen and (max-width: 992px) {
@@ -486,6 +563,14 @@ main{
         width: calc(100% / 2 - 10px / 2);
                     
     }
+    
+    /* player serction */
+
+    .player-left .icons{
+        flex-direction: column;
+        gap: 3px;
+    }
+    
     
 }
 
@@ -575,8 +660,8 @@ main{
         vertical-align: middle;
         
     }
-    
-    
+
+          
     /* main section */
     
     .banner{
@@ -593,7 +678,8 @@ main{
     /* player section */
 
     .player-left img{
-        width: 30px;      
+        width: 30px;   
+        margin-right: 5px;   
         
     }
     
@@ -607,9 +693,15 @@ main{
     }
     
     .player-left .icons{        
-        margin-left: 20px;
+        margin-left: 10px;
+        gap: 3px;
         
         
     }
+
+    .player-right{
+        gap: 6px;
+    }
+    
     
 }
