--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    font-family: sans-serif;
+    font-family:'PT Sans', sans-serif;;
     background-color: #141922;
 }
 
@@ -17,7 +17,7 @@ body{
 .container{
     display: flex;   
     
-    height: calc(100vh - 71px);  /* 71 px relativi al player */
+    height: calc(100vh - 73px);  /* 73 px relativi al player */
     
 }
 
@@ -75,6 +75,8 @@ a{
 
 .button:hover{
     transform: scale(1.1);
+    cursor: pointer;
+
 }
 
 /* active status */
@@ -114,8 +116,26 @@ a{
 }
 .played-bar{
     height:3px;
-    width:20%;
+    width:30%;
     background-color: #5a5a5a;
+    position: relative;
+    
+}
+
+.player-center .played-bar{
+    width: 100%;
+    background-color: #5a5a5a;
+
+    animation-name: play;
+    animation-duration: 20s;
+    animation-timing-function: linear;
+    /* animation-iteration-count: infinite; */
+}
+
+@keyframes play {
+    0% {width: 0%;}
+    100%{width: 100%;}
+    
 }
 
 
@@ -124,22 +144,27 @@ a{
     z-index: 1;
     display: none;
     top: -3px;
-    left: 20%;
+    right: 0;
     width: 10px;
     height: 10px;
     
     border-radius: 50%;
     background-color: white;
 }
+
+
 .volume-bar:hover .played-bar{
     background-color: #c1eb7d;
-    transform: scale(1.1);
+    cursor: pointer;
+    
+    
 }
 
 .volume-bar:hover .circle-bar{
     display: block;
 }
 
+ 
 
 
 
@@ -213,11 +238,9 @@ aside > *:not(#primary-nav,#logo){
 
 
 
-.nav-item .aside-icon{
-    
+.nav-item .aside-icon{    
     margin-right: 7px ;
-    height: 26px;
-    
+    height: 26px;    
 }
 
 #aside-playlists{
@@ -246,11 +269,11 @@ aside > *:not(#primary-nav,#logo){
     margin-right: 8px ;
 }
 
-.list{
+#aside-playlists .list{
     overflow: auto;
 }
 
-.playlist-name{
+#aside-playlists .playlist-name{
     overflow: auto;
     line-height: 2.3em;
 }
@@ -311,6 +334,7 @@ main{
 
 .banner{
     position: fixed;
+    z-index: 1;
     display: flex;
     justify-content: end;
     width: calc(100vw - 230px);
@@ -323,6 +347,9 @@ main{
     /* height: 80px; */
 }
 
+.secondary-nav{
+    margin-inline: 10px;
+}
 
 .secondary-nav ul{
     display: flex;
@@ -371,8 +398,7 @@ main{
     position: relative;
 
 }
-.tile img{    
-    
+.tile img{        
     display: block;
     width: 100%;
     max-width: 180px; 
@@ -387,6 +413,7 @@ main{
     font-size: 50px;
 
     color: white;
+
 }
 
 .tile .tile-img:hover img{
@@ -395,8 +422,9 @@ main{
 
 .tile .tile-img:hover .fa-circle-play{
     display: block;
-}
+    cursor: pointer;
 
+}
 
 
 
@@ -466,6 +494,7 @@ main{
 
 .player-left .fa-regular:hover{
     color: white;
+    cursor: pointer;
 
 }
 
@@ -482,8 +511,14 @@ main{
     color: white;
 }
 
+.player-buttons .fa-solid{
+    cursor: pointer;
+}
+
 .player-buttons .fa-circle-play{
     scale: 1.8;
+    cursor: pointer;
+    
 }
 
 .player-buttons .fa-circle-play:hover{
@@ -509,14 +544,10 @@ main{
 }
 
 
-
-
 .number-side-bar{
     font-size: 8px;
     color: white;
 }
-
-
 
 
 .player-right{
@@ -532,6 +563,11 @@ main{
 
 .player-right .icons{
     color: #797c80
+}
+
+.player-right .icons:hover{
+    color: white;
+    cursor: pointer;
 }
 
 .volume-bar{
